@@ -1,5 +1,8 @@
+2015/10/27:
+Fix the Makefile in an attempt to allow installation under opam/Windows.
+Thanks to Daniel Weil for his patient explanations.
+
 2015/10/26:
-Fix the Makefile in an attempt to allow installation under opam/Cygwin.
 Allow --list-errors to work on 32-bit machines (with low hard limits).
 This should fix a problem whereby the 2015/10/23 release could not
 bootstrap on a 32-bit machine.
